# TSC

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  INSTALL.md  README.md  build-flatpak.sh  descriptor.json  install-flatpak-dependencies.sh  org.secretchronicles.TSC.json  travis.sh
tsc/: CMakeLists.txt  Doxyfile  Makefile  Rakefile  config.hpp.in  mruby_tsc_build_config.rb
tsc/cmake/modules/: FindCEGUI.cmake  FindFLAC.cmake  FindFreeImage.cmake  FindFreetype.cmake  FindLibXmlPP.cmake  FindOGG.cmake  FindPCRE.cmake  FindRuby.cmake  FindSFML.cmake  FindVorbis.cmake  ProvideMRuby.cmake  ProvidePodParser.cmake  ProvideTinyclipboard.cmake
tsc/data/campaigns/: smc.tsccpn  tsc.tsccpn  tutorial.tsccpn
tsc/data/editor/: level_menu.xml  world_menu.xml
tsc/data/gui/fonts/: DejaVuSerif-Bold.font  DejaVuSerif-BoldItalic.font  DejaVuSerif-Italic.font  DejaVuSerif-Regular.font
tsc/data/gui/imagesets/: TSCLook256.imageset
tsc/data/gui/layouts/: box_question.layout  box_text.layout  debug_window.layout  editor.layout  game_console.layout  hud.layout  secret_area_message.layout  statictext.layout
tsc/data/gui/layouts/level_settings/: main.layout  tab_background.layout  tab_global_effect.layout  tab_main.layout  tab_script.layout
tsc/data/gui/layouts/menu/: main.layout  options_main.layout  savegame.layout  start.layout  tab_audio.layout  tab_editor.layout  tab_game.layout  tab_joystick.layout  tab_keyboard.layout  tab_video.layout
tsc/data/gui/looknfeels/: TSCLook256.looknfeel
tsc/data/gui/schemes/: TSCLook256.scheme
tsc/data/levels/: cave_1_upper.tsclvl  desert_break_in.tsclvl  game_tutorial.tsclvl  lvl_1.tsclvl  lvl_3.tsclvl  lvl_5.tsclvl  menu_brown_1.tsclvl  mountain_trials.tsclvl  quintus_3.tsclvl  quintus_5.tsclvl  quintus_5_sub.tsclvl  quintus_5_top.tsclvl  red8.tsclvl
tsc/data/music/land/: land_1.txt
tsc/data/music/story/: theme_1.txt  theme_2.txt  tutorial.txt
tsc/data/pixmaps/scene_images/: placeholder.settings
tsc/data/scripting/: 00_init.rb  01_enable.rb  02_climbing_box.rb  03_exit_door.rb  04_giant_jewel_box.rb  05_immediate_sprite.rb  06_message.rb  07_switch.rb
tsc/data/translations/: Makefile  Secretchronicles.pot  de.po  el.po  es.po  fi_FI.po  fr.po  hu.po  it.po  nl.po  nn.po  pl.po  pt_BR.po  ru.po  tr.po  zh_TW.po
tsc/docs/: authors.txt
tsc/docs/man/: tsc.6
tsc/docs/pages/: compile_on_debian_10.md  known_bugs.md  old_smc_history.md  scene.md  translating.md
tsc/docs/scripting/: index.core.html.part  index.core.pod  index.ssl.html.part  index.ssl.pod  style.css  template.html.part
tsc/scrdg/: scrdg.cpp  scrdg.hpp
tsc/src/audio/: audio.cpp  random_sound.cpp  random_sound.hpp
tsc/src/campaign/: campaign_loader.cpp  campaign_manager.cpp  campaign_manager.hpp
tsc/src/core/: config.hpp.in  credits.cpp.in  game_core.cpp  gettext.h  global_basic.hpp  global_game.hpp  main.cpp  main.hpp  property_helper.cpp  property_helper.hpp  sprite_manager.cpp
tsc/src/core/editor/: editor.cpp  editor.hpp  editor_items_loader.cpp  editor_items_loader.hpp
tsc/src/core/filesystem/: resource_manager.cpp  resource_manager.hpp
tsc/src/enemies/: army.cpp  army.hpp  beetle.cpp  beetle.hpp  beetle_barrage.cpp  beetle_barrage.hpp  doom_larry.cpp  eato.cpp  eato.hpp  enemy.cpp  flyon.cpp  flyon.hpp  furball.cpp  furball.hpp  gee.cpp  gee.hpp  krush.cpp  krush.hpp  larry.cpp  larry.hpp  pip.cpp  pip.hpp  rokko.cpp  rokko.hpp  spikeball.cpp  spikeball.hpp  static.cpp  static.hpp  thromp.cpp  thromp.hpp
tsc/src/enemies/bosses/: turtle_boss.cpp  turtle_boss.hpp
tsc/src/gui/: debug_window.cpp  debug_window.hpp  game_console.cpp  hud.cpp  hud.hpp  menu.cpp  menu.hpp  menu_data.cpp  menu_data.hpp
tsc/src/input/: joystick.cpp  keyboard.cpp  mouse.cpp  mouse.hpp
tsc/src/level/: level.cpp  level.hpp  level_background.cpp  level_editor.cpp  level_editor.hpp  level_loader.cpp  level_manager.cpp  level_player.cpp  level_player.hpp  level_settings.cpp
tsc/src/objects/: ball.cpp  bonusbox.cpp  bonusbox.hpp  box.cpp  box.hpp  crate.cpp  crate.hpp  lava.cpp  level_entry.cpp  level_entry.hpp  level_exit.cpp  level_exit.hpp  moving_platform.cpp  moving_platform.hpp  movingsprite.cpp  path.cpp  path.hpp  powerup.cpp  secret_area.cpp  secret_area.hpp  spinbox.cpp  sprite.cpp  sprite.hpp  star.cpp  text_box.cpp  text_box.hpp
tsc/src/overworld/: overworld.cpp  overworld.hpp  overworld_loader.cpp  overworld_loader.hpp  world_editor.cpp  world_editor.hpp  world_layer.cpp  world_layer.hpp  world_manager.cpp  world_player.cpp  world_waypoint.cpp  world_waypoint.hpp
tsc/src/scene/: 01_prologue.cpp  01_prologue.hpp  scene.cpp  scene.hpp  scene_actions.cpp  scene_actions.hpp
tsc/src/scripting/: scripting.cpp
tsc/src/scripting/events/: level_save_load_event.cpp  level_save_load_event.hpp
tsc/src/scripting/objects/: mrb_eventable.cpp  mrb_tsc.cpp  mrb_uids.cpp
tsc/src/scripting/objects/boxes/: mrb_bonusbox.cpp  mrb_box.cpp  mrb_spinbox.cpp  mrb_textbox.cpp
tsc/src/scripting/objects/enemies/: mrb_armadillo.cpp  mrb_beetle.cpp  mrb_beetle_barrage.cpp  mrb_doom_larry.cpp  mrb_eato.cpp  mrb_enemy.cpp  mrb_flyon.cpp  mrb_furball.cpp  mrb_gee.cpp  mrb_krush.cpp  mrb_larry.cpp  mrb_pip.cpp  mrb_rokko.cpp  mrb_spika.cpp  mrb_spikeball.cpp  mrb_static.cpp  mrb_thromp.cpp  mrb_turtle_boss.cpp
tsc/src/scripting/objects/misc/: mrb_audio.cpp  mrb_ball.cpp  mrb_input.cpp  mrb_level.cpp  mrb_level_player.cpp  mrb_scene.cpp  mrb_scene.hpp  mrb_timer.cpp
tsc/src/scripting/objects/powerups/: mrb_berry.cpp  mrb_cookie.cpp  mrb_fireberry.cpp  mrb_lemon.cpp  mrb_powerup.cpp
tsc/src/scripting/objects/specials/: mrb_crate.cpp  mrb_enemy_stopper.cpp  mrb_falling_jewel.cpp  mrb_jewel.cpp  mrb_jumping_jewel.cpp  mrb_lava.cpp  mrb_level_entry.cpp  mrb_level_exit.cpp  (+3 more)
tsc/src/user/: preferences.cpp  preferences.hpp  preferences_loader.cpp
tsc/src/user/savegame/: save_level.cpp  save_level.hpp  savegame.cpp  savegame_loader.cpp  savegame_loader.hpp
tsc/src/video/: animation.cpp  animation.hpp  color.hpp  img_set.cpp  img_set.hpp  loading_screen.cpp  video.cpp  video.hpp
(+3 files in other folders)
